src/templates/blogTemplate.scss
@import '../constants/variable';

.blog-post {
  border-bottom: 1px solid $grey-400;
  margin-bottom: $spacing-unit;
  &--title {
    line-height: 1.3;
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    hyphens: auto;
    @media only screen and (max-width: 480px) {
      font-size: 1.8rem;
    }
  }
  &--detail-container {
    padding: $spacing-unit / 2 $spacing-unit * 2;
  }
  &--date,
  &--tag {
    display: flex;
    flex: 1;
    flex-shrink: 0;
    flex-basis: 250px;
    align-items: center;
    font-family: $font-family;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.375em;
    margin-bottom: $spacing-unit;
    color: $text-color-light;
    a {
      text-decoration: none;
      color: inherit;
    }
    > * {
      margin: 0 $spacing-unit / 2;
      @media (min-width: $media-mobile) {
        margin: 0 $spacing-unit;
      }
      &:first-child {
        margin-left: 0;
      }
      &:last-child {
        margin-right: 0;
      }
    }
  }
  &--summary {
    color: $text-color;
    padding: 0 $spacing-unit * 2;
    p {
      padding: $spacing-unit 0;
      line-height: 1.4em;
      border-bottom: 1px solid $grey-300;
    }
  }
  &--content {
    padding: $spacing-unit $spacing-unit * 2;
    font-family: $font-family;
    h2 {
      font-size: 1.6rem;
      margin-top: 1.5rem;
      margin-bottom: 0.5rem;
      line-height: 1.2;
      @media only screen and (max-width: 480px) {
        font-size: 1.4rem;
      }
    }
    h3 {
      margin: 0 0 0.5rem;
      font-size: 1.2rem;
      line-height: 1.8em;
      @media only screen and (max-width: 480px) {
        font-size: 1.4rem;
      }
    }
    p {
      margin-bottom: 0.5rem;
    }
    em {
      font-style: italic;
    }
    a {
      text-decoration: none;
      border-bottom-color: transparent;
      border-bottom-style: solid;
      border-bottom-width: 2px;
      transition-duration: 500ms;
      transition-timing-function: ease-in-out;
      transition-property: border-bottom-color, color;
    }
    a:hover {
      color: $primary-color;
      border-bottom-color: $primary-color-light;
    }
    a[href^="https://www.youtube.com"] {
      display: flex;
      justify-content: center;
      position: relative;
      &::after {
        content: '\25BA';
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        font-size: 120px;
        color: rgba(255, 255, 255, 0.4);
      }
    }
    p,
    li {
      font-size: 0.9rem;
      font-weight: 400;
      line-height: 1.6em;
      color: rgba(0, 0, 0, 0.87);
      @media (min-width: $media-mobile) {
        font-size: 0.875rem;
        line-height: 1.464em;
      }
    }
    hr {
      margin: 0 0 $spacing-unit * 2;
      padding: 0;
      height: 1px;
      background: $grey-300;
    }
    blockquote {
      border-radius: $spacing-unit;
      margin: $spacing-unit;
      padding: $spacing-unit;
      background: $grey-200;
      position: relative;
      &::before {
        content: '\275d';
        position: absolute;
        font-size: 1.6rem;
        color: $text-color-light;
      }
      &::after {
        content: '\275e';
        position: absolute;
        right: $spacing-unit;
        bottom: $spacing-unit;
        font-size: 1.6rem;
        color: $text-color-light;
      }
      > p {
        position: relative;
        text-indent: $spacing-unit * 2;
        &:last-child {
          margin-bottom: 0;
        }
      }
    }
  }
  &-adjacent-articles {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    list-style: none;
    padding: 0;
    margin: $spacing-unit 0;

    > li {
      max-width: 100%;
    }

    a {
      display: inline-block;
      margin: $spacing-unit;
      line-height: 1.5;
      vertical-align: middle;
      text-decoration: none;
      border-bottom: 1px solid;
      max-width: 100%;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }
  }
}

